--- a/public/card.html
+++ b/public/card.html
@@ -128,6 +128,13 @@
     const cvvError = document.getElementById('cvvError');
     const cardHolderError = document.getElementById('cardHolderError');
 
+    const valid =
+      validateCardNumber() &&
+      validateHolder() &&
+      validateMonth() &&
+      validateYear() &&
+      validateCVV();
+
     function maskCardNumber(value) {
       return value.replace(/\D/g, '').substring(0, 16).replace(/(.{4})/g, '$1 ').trim();
     }
