--- a/public/card.html
+++ b/public/card.html
@@ -231,6 +231,7 @@
 
       const valid =
         validateCardNumber() &&
+        validateHolder() &&
         validateMonth() &&
         validateYear() &&
         validateCVV();
