--- a/public/wallet.html
+++ b/public/wallet.html
@@ -3,36 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfel</title>
+  <title>Portfel Masterpass</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <style>
+    body { font-family: 'Roboto', sans-serif; background: #f5f5f5; }
+    .bg-main { background: white; border-radius: 8px; box-shadow: 0 4px 16px rgba(0,0,0,0.1); }
+    .btn-primary { background: #F36F21; }
+    .btn-primary:hover { background: #d85f1a; }
+  </style>
 </head>
-<body class="bg-black flex items-center justify-center min-h-screen">
-  <div class="bg-white w-[480px] sm:w-[640px] rounded shadow-lg p-6 space-y-6">
+<body class="flex items-center justify-center min-h-screen p-4">
+  <div class="bg-main w-full max-w-lg p-6 space-y-4">
     <div class="flex justify-between items-center border-b pb-2">
-      <h1 class="text-lg font-semibold text-gray-700">Portfel Masterpass™</h1>
-      <button onclick="logout()" class="text-sm text-red-500 underline">Wyloguj się</button>
+      <h1 class="text-2xl font-semibold text-gray-900">Portfel Masterpass™</h1>
+      <button onclick="logout()" class="text-sm text-red-500 underline">Wyloguj</button>
     </div>
+
+    <div class="space-y-2">
+      <p class="text-gray-600">Użytkownik: <span id="userEmail" class="font-medium text-gray-900"></span></p>
+      <p class="text-gray-600">Saldo: <span id="userBalance" class="font-bold text-green-600"></span> PLN</p>
+    </div>
+
+    <a href="/card.html" class="btn-primary text-white w-full py-2 text-center rounded">Wypłać środki na kartę</a>
 
     <div>
-      <p class="text-sm text-gray-600">Użytkownik: <span id="userEmail" class="font-medium text-black"></span></p>
-      <p class="text-sm text-gray-600">Saldo: <span id="userBalance" class="font-bold text-green-600"></span> PLN</p>
-    </div>
-
-    <div class="pt-4">
-      <a href="card.html" class="block bg-orange-500 hover:bg-orange-600 text-white py-2 rounded text-center">Wypłać środki na kartę</a>
+      <h2 class="text-lg font-semibold text-gray-700 border-b pb-1">Ostatnie transakcje</h2>
+      <ul class="divide-y">
+        <li class="flex justify-between py-2 items-center">
+          <div>
+            <p>Wyplata za zamowienie • BLIK • 1234</p>
+            <p class="text-xs text-gray-500">2025-06-28 15:32</p>
+          </div>
+          <div class="text-green-600 font-medium">+120.00 PLN</div>
+        </li>
+        <li class="flex justify-between py-2 items-center">
+          <div>
+            <p>Zakup online • Karta • ****3456</p>
+            <p class="text-xs text-gray-500">2025-06-27 12:10</p>
+          </div>
+          <div class="text-red-600 font-medium">−89.99 PLN</div>
+        </li>
+        <li class="flex justify-between py-2 items-center">
+          <div>
+            <p>Zwrot • Karta • ****3456</p>
+            <p class="text-xs text-gray-500">2025-06-25 09:45</p>
+          </div>
+          <div class="text-green-600 font-medium">+89.99 PLN</div>
+        </li>
+      </ul>
     </div>
   </div>
 
   <script>
     const user = JSON.parse(localStorage.getItem('user'));
-    if (!user) window.location.href = 'index.html';
-
+    if (!user) window.location.href = '/index.html';
     document.getElementById('userEmail').textContent = user.email;
-    document.getElementById('userBalance').textContent = user.balance;
+    document.getElementById('userBalance').textContent = user.balance.toFixed(2);
 
     function logout() {
       localStorage.removeItem('user');
-      window.location.href = 'index.html';
+      window.location.href = '/index.html';
     }
   </script>
 </body>
